--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
+#search{
+position: absolute; 
+bottom: 0px;
+width: 100%;
+}
 #left{
   float: left;
   width: 50%;
-  height: 100%;
+  height: 90%;
+
 }
 #right{
   float: right;
   width: 50%;
-  height: 100%;
+  height: 90%;
 }
